Closed Bug 31685 Opened 25 years ago Closed 20 years ago

changing "use secure connection" doesn't affect the icons in the folder pane until restart (toggling SSL connection type does not immediately show lock)

Categories

(SeaMonkey :: MailNews: Message Display, defect, P3)

defect

Tracking

(Not tracked)

RESOLVED FIXED
Future

People

(Reporter: sspitzer, Assigned: neil)

References

Details

Attachments

(1 file, 1 obsolete file)

if I add a new news server, say secnews.netscape.com, it shows up with the normal news icon in the folder pane. if I go to the account manager dialog, and check the "use secure connection (SSL)." checkbox, the icon doesn't turn into a secure news server icon until I restart. I'm sure the same goes for secure imap.
QA Contact: lchiang → laurel
need to reflect this into RDF.
Status: NEW → ASSIGNED
Target Milestone: --- → M16
moving non-critical bugs to M20
Target Milestone: M16 → M20
over to sspitzer, probably pretty easy
argh, actually reassign
Assignee: alecf → sspitzer
Status: ASSIGNED → NEW
*** Bug 76786 has been marked as a duplicate of this bug. ***
QA Contact: laurel → stephend
Hardware: PC → All
I think I know what needs to be done. when SetIsSecure() is called, we need to notify any listeners on the folder (the root folder for the server) that the boolean property nc:IsSecure has changed. I just got done doing something similar for bug #85088. shouldn't be had at all. we'll probably need to expose a new method on nsIMsgFolder, like boolPropertyChanged(), otherwise we'd have to copy over a lot of notification code that already lives in nsMsgFolder.cpp into nsMsgIncomingServer.cpp still future, as I'm too busy to get to this right now.
Status: NEW → ASSIGNED
Target Milestone: --- → Future
*** Bug 177885 has been marked as a duplicate of this bug. ***
Product: Browser → Seamonkey
*** Bug 278552 has been marked as a duplicate of this bug. ***
Attached patch Non-working patch :-( (obsolete) — Splinter Review
Well, I've based this on the other notifications, and I traced with gdb and I get as far as calling nsMsgRDFDataSource::NotifyPropertyChanged so I don't understand why the display doesn't update. Any ideas?
Assignee: sspitzer → neil.parkwaycc.co.uk
Attachment #171454 - Flags: superreview?(bienvenu)
Attachment #171454 - Flags: review?(jan)
Summary: changing "use secure connection" doesn't affect the icons in the folder pane until restart → changing "use secure connection" doesn't affect the icons in the folder pane until restart (toggling SSL connection type does not immediately show lock)
Attached patch Fixed patchSplinter Review
Turned out I had isSecure and aIsSecure the wrong way around.
Attachment #171454 - Attachment is obsolete: true
Attachment #194837 - Flags: superreview?(bienvenu)
Attachment #194837 - Flags: review?(bienvenu)
*** Bug 301114 has been marked as a duplicate of this bug. ***
Attachment #194837 - Flags: superreview?(bienvenu)
Attachment #194837 - Flags: superreview+
Attachment #194837 - Flags: review?(bienvenu)
Attachment #194837 - Flags: review+
Neil, is this checked in? Does it affect Thunderbird or is it suite-specific?
(In reply to comment #12) >Neil, is this checked in? It is now ;-) >Does it affect Thunderbird or is it suite-specific? No, this is core code.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Comment on attachment 171454 [details] [diff] [review] Non-working patch :-( clearing obsolete review request
Attachment #171454 - Flags: superreview?(bienvenu)
Attachment #171454 - Flags: review?(Jan.Varga)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: