Bug 31685 Push secure icon to folder pane r+sr=bienvenu